Improved documentation and fixed scripts broken by recent changes to settings.pl. Moved example aliases and crontab to examples/ and added information on using procmail.
Better documentation on use of InstaMapper.

Fixed rss.pl, scan.pl, and mobile.pl that were broken by changes to settings.pl.

--HG--
rename : aliases.dist => examples/aliases.dist
rename : crontab.dist => examples/crontab.dist

--- a/INSTALL
+++ b/INSTALL
@@ -7,14 +7,21 @@ configuration files.
 
 	$ ./install.pl
 
-2.  Setup Crontab based on example crontab created by installer.
+2.  Setup Crontab based on examples/crontab created by installer.
 
 	$ crontab -e
 
-3.  (optional) Setup email alias in /etc/mail/aliases.
+3.  (optional) Setup email alias for receiving text and photo updates.
 
-	Copy the example alias from example aliases to the system
-	aliases file.
+	Alternate 1: (requires root)
+	Copy the example alias from examples/aliases to the system
+	aliases file, most likely at /etc/aliases or /etc/mail/aliases.
 	# newaliases
+
+	- Or -
+
+	Alternate 2:
+	Copy the example procmailrc entry from examples/procmailrc to
+	your local .procmailrc in $HOME.
 
 See README for more information.
