--- a/TODO
+++ b/TODO
@@ -33,4 +33,6 @@ Generic RSS support
 Multiple GPS sources
 Other types of GPS sources
 Windows Support
+Lock without needing KML file
+More fine-grained locking
 and much more...
