Fixed timezone dependence and moved file paths to a hash.
The TZ environment variable no longer has to be declared as I am now using timegm() instead of mktime() which is timezone independent.

File paths for KML, RSS, and Atom feeds are now in their own hash instead of being global variables.

--- a/TODO
+++ b/TODO
@@ -33,9 +33,11 @@ Generic RSS support
 Multiple GPS sources
 Other types of GPS sources
 Windows Support
+  Cygwin and ActivePerl
 Lock without needing KML file
 More fine-grained locking
 Eliminate usage of system() and open("|")
+Develop test suite.
 and much more...
 
 Windows Issues:
@@ -46,3 +48,7 @@ Windows Issues:
   Cron replacement
   Email replacement
   system() and open("|") use Command Interpreter instead of shell.
+
+
+  Currently updatelocation.pl runs under cygwin, but it fails with a
+  read error in Expat.pm in ActivePerl.  Nothing else tested.
