Preliminary GPX support now works.
./gpx.pl creates an InstaMapper compatible CSV file, gps-out.csv, which can be imported by ./updatelocation.pl gps-out.csv.  Since the software does not currently support multiple sources of data, this works best when only used with GPX files or the GPX data does not overlap any InstaMapper data.

--- a/TODO
+++ b/TODO
@@ -38,6 +38,7 @@ Lock without needing KML file
 More fine-grained locking
 Eliminate usage of system() and open("|")
 Develop test suite.
+Better testing of Unicode/UTF-8.
 and much more...
 
 Windows Issues:
