--- a/TODO
+++ b/TODO
@@ -18,6 +18,7 @@ Extend functionality to .THM thumbnail/metadata files and their corresponding vi
 Correctly import .GPX files into database to improve its accuracy (fixing for absent TZdata if needed).
 Correctly import .csv sensor data/other data into database and correlate time to existing location tags.
 Create list of fields in files to import
+Copy rss.pl to twitter.pl, adapt to use improved twitter XML, adapt install.pl to have an option for inputting twitter username & converting that to the user_id key, offer option to download entire twitter archive for user to provide ability to historically geotag photos.  See example URL:  http://api.twitter.com/1/statuses/user_timeline.xml?page=$NN&user_id=$UID
 
 
 Loren's TODO List
