--- a/TODO
+++ b/TODO
@@ -15,7 +15,7 @@ Write out daily KML file that includes all datapoints, images, Twitter updates, 
 Write out monthly KML file that includes 1 datapoint every 15 minutes (?), and all file/log entries.
 Write out yearly KML file that includes all file/log entries.
 Extend functionality to .THM thumbnail/metadata files and their corresponding video files.
-Correctly import .GPX files into database to improve its accuracy (fixing for absent TZdata if needed).
+Correctly import .gpx files into database to improve its accuracy (fixing for absent TZdata if needed).
 Correctly import .csv sensor data/other data into database and correlate time to existing location tags.
 Create list of fields in files to import
 Copy rss.pl to twitter.pl, adapt to use improved twitter XML, adapt install.pl to have an option for inputting twitter username & converting that to the user_id key, offer option to download entire twitter archive for user to provide ability to historically geotag photos.  See example URL:  http://api.twitter.com/1/statuses/user_timeline.xml?page=$NN&user_id=$UID
@@ -43,6 +43,7 @@ More fine-grained locking
 Eliminate usage of system() and open("|")
 Develop test suite
 Better testing of Unicode/UTF-8
+  Test with ASCII, Latin-1, Windows-1252, Chinese, Klingon, Cuniform
 Properly support :locale instead of forcing utf8
 Expand on TIPS and time zone issues
 Support POST for InstaMapper
@@ -50,8 +51,17 @@ Save files in a safer manner
   Save to .bak
   unlink original
   rename
+    This would interfere with fine-grained locking
 Try an use relative URLs to make KML file more useful without needing a web server
 Simple script to create certain constructs like Folders in KML
+Better example webpage
+Upload form for images, comments, and GPX data
+email.pl and scan.pl support GPX and comments
+Multiple trips/paths
+Debian/Ubuntu packages
+Android app to easily push GPX/images/comments
+uuidgen for Atom
+Description
 and much more...
 
 Windows Issues:
