Cleaned up geotag.pl and phototag.pl a little and fixed logging.

--- a/README
+++ b/README
@@ -34,6 +34,8 @@ timediff.pl - Scans CSV file for large gaps in updates and reports them.
 
 geotag.pl - (Not ready yet.)
 
+twitter.pl - (Not ready yet.)
+
 
 
 TIPS
