--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ Library building
 
 Remaining Steps:
 jpegtran image manipulation
+  rotate, optimize, progressive
 Embed original filesize & filename in comment tag
 Determine timezone from GPS location
 Determine whether DST is in-effect based on date & timezone data
@@ -18,7 +19,9 @@ Extend functionality to .THM thumbnail/metadata files and their corresponding vi
 Correctly import .gpx files into database to improve its accuracy (fixing for absent TZdata if needed).
 Correctly import .csv sensor data/other data into database and correlate time to existing location tags.
 Create list of fields in files to import
-Copy rss.pl to twitter.pl, adapt to use improved twitter XML, adapt install.pl to have an option for inputting twitter username & converting that to the user_id key, offer option to download entire twitter archive for user to provide ability to historically geotag photos.  See example URL:  http://api.twitter.com/1/statuses/user_timeline.xml?page=$NN&user_id=$UID
+Copy rss.pl to twitter.pl, adapt to use improved twitter XML
+Adapt install.pl to have an option for inputting twitter username & converting that to the user_id key
+Offer option to download entire twitter archive for user to provide ability to historically geotag photos.  See example URL:  http://api.twitter.com/1/statuses/user_timeline.xml?page=$NN&user_id=$UID
 
 
 Loren's TODO List
@@ -39,6 +42,34 @@ Multiple GPS sources
 Other types of GPS sources
 Windows Support
   Strawberry Perl, ActivePerl, and Cygwin
+  cygwin
+    libsqlite3_0
+    libsqlite3-devel
+    sqlite3
+    postgresql-client
+    postgresql-devel
+    gcc4
+    gcc4-core
+    gcc4-g++
+
+    perl -MCPAN -eshell <<EOF
+    o conf build_requires_install_policy yes
+    o conf prerequisites_policy yes
+    o conf commit
+    EOF
+
+    DBD::SQLite
+
+    Digest::SHA1
+    Net::MySQL
+    DBD::mysqlPP
+
+    DBD::PgPP
+
+    Clone
+    SQL::Statement
+    Text::CSV_XS
+    DBD::CSV
 More fine-grained locking
 Eliminate usage of system() and open("|")
 Develop test suite
@@ -60,6 +91,7 @@ email.pl and scan.pl support GPX and comments
 Multiple trips/paths
 Debian/Ubuntu packages
 Android app to easily push GPX/images/comments
+Android app replacement for InstaMapper
 uuidgen for Atom
 Description
 and much more...
