Fixed Windows support for image processing.
Directory creation works on both Windows and Unix systems now.

Improperly Geo-Tagged images are now no longer processed.

Images are copied into place if jpegtran is missing.

email.pl, scan.pl, and geotag.pl now skip images that failed to process instead of dying in the middle.

install.pl has improved dependency detection for ImageMagick and jpegtran.

--- a/TODO
+++ b/TODO
@@ -62,6 +62,7 @@ Debian/Ubuntu packages
 Android app to easily push GPX/images/comments
 uuidgen for Atom
 Description
+Maintain a log file
 and much more...
 
 Windows Issues:
