Fixed decoding of Copyright tag.
Only parse output image file if verbosity is requested.

--- a/TODO
+++ b/TODO
@@ -63,6 +63,12 @@ Android app to easily push GPX/images/comments
 uuidgen for Atom
 Description
 Maintain a log file
+Facebook, FourSquare, and Twitter integration
+My Photo Gallery Integration
+Plugin Support
+Duplicate detection
+Filename collision handling
+Feed Validation
 and much more...
 
 Windows Issues:
