Rewrote lastTimestamp in a cleaner fashion.  It was grabbing timestamps from the wrong source previously.
UpdateLastTimestamp also produces cleaner output now.

--- a/TODO
+++ b/TODO
@@ -94,6 +94,7 @@ Android app to easily push GPX/images/comments
 Android app replacement for InstaMapper
 uuidgen for Atom
 Description
+Lossy image manipulation with GD
 and much more...
 
 Windows Issues:
