Fixed installer to ask for and fill in the InstaMapper Device Key.
Installer would fail to install the settings.pl due to an unrecognized DEVICEKEY substitution

Moved several files from the root to subdirectories.

Added some initial tests.

--HG--
rename : outline => doc/outline
rename : mysql.init => doc/schema/mysql.init
rename : postgresql.init => doc/schema/postgresql.init
rename : sqlite3.init => doc/schema/sqlite3.init

--- a/TODO
+++ b/TODO
@@ -120,6 +120,9 @@ Add app info hash
   Usage
   Option
 Add -help
+Non-JPEG support
+Improved REST API for PhotoCatalog for Android
+  Query list of valid sources
 and much more...
 
 Windows Issues:
