Fixed minor issues with email image processing.
clostestEntry() did not detect when no entries were loaded.

email.pl used an undefined value in error message.

--- a/TODO
+++ b/TODO
@@ -128,6 +128,7 @@ Send email to Android from Perl
 Does Android auto-fill type for content:?
 Check on FileSpec, Basename, and my use of paths.
 Test with chdir('/var/empty') and drop $cwd
+Check for undefined Subject and Date in email.pl
 and much more...
 
 Windows Issues:
