Various improvements in image processing and manipulating it's meta-data.
Image title and description now stored in XMP.  Add UUID to process images and store it in the database to better track images.  Don't overwrite existing image meta-data.  Lastly, record image in database earlier during processing.

FEATURE: Clean up email text and drop signature.

FIX: Don't double escape description text in incoming email.

FEATURE: Added some initial support for --dry-run option, don't rely on it!

FEATURE: Added support for setting source parameters on the command-line.

--- a/TODO
+++ b/TODO
@@ -150,6 +150,7 @@ Check for undefined Subject and Date in email.pl
 Better CGI Handling
   eval over dies such as failed to find source.
   use bytes on escaping
+geotag.pl currently broken, should check all other scripts as well
 and much more...
 
 Windows Issues:
